# DiffVMB-pub

./: README.md  environment.yml  install_env.sh  pyproject.toml
dataset/test/: Marmousi_vel.mat  Overthrust_vel.mat  SEAMArid_vel.mat  SEGEAGE_vel.mat
diffvmb/: sample_indistribution_part1.py  sample_marmousi_part1.py  sample_part1.py  train.py
diffvmb/code/: datasets.py  gaussian_diffusion.py  respace.py  script_util.py  train_util.py
diffvmb_part1/: sample.py  train.py
diffvmb_part1/code/: datasets.py  dist_util.py  resample.py  respace.py  train_util.py  unet.py
diffvmb_part2/: sample.py  train.py
diffvmb_part2/code/: datasets.py  gaussian_diffusion.py  respace.py  train_util.py  unet.py
