[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "DiffVMB"
authors = [
    {name = "Shijun Cheng", email = "sjcheng.academic@gmail.com"},
]
description = "Reproducible material for: Shallow-to-deep velocity model building via diffusion models"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["velocity model building", "seismic", "diffusion models"]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
//        "numpy >= 1.22.0",
//        "torch>=1.10.1",
//        "pylops >= 2.0.0",
// 	      "setuptools >= 61.2.0",
    ]

dynamic = ["version"]

[tool.setuptools.packages]
find = {}
